added content to modal-controls. added centering css for the content in the controls

--- a/stripes.html
+++ b/stripes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-
+    <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -115,17 +115,32 @@
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content modal-controls">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Modal title</h4>
+          <h4 class="modal-title text-center">Places Control Box</h4>
         </div>
         <div class="modal-body">
-          ...
+          <div class="absolute-position">
+            <div class="outer-center">
+              <div class="inner-center">
+                <form class="form-inline" role="form">
+                  <input type="search" placeholder="Search places...">
+                  <button type="submit" class="btn btn-default">Search</button>
+                </form>
+              </div>
+            </div>
+            <div class="outer-center">
+                <div class="inner-center">
+                  <h4>Sort places </h4>
+                  <button type="button" class="btn btn-default btn"><span class="glyphicon glyphicon-arrow-up"></span> Popularity </button>
+                  <button type="button" class="btn btn-default btn"><span class="glyphicon glyphicon-arrow-up"></span> Distance</button>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
